Major refactor: Migrate from YAML to GUI configuration
Breaking changes:
- Integration now uses config flow instead of YAML configuration
- Users must remove YAML config and reconfigure via GUI

New features:
- GUI-based setup via Integrations page
- Options flow for changing settings without reconfiguration
- Proper coordinator pattern for data updates
- Binary sensors instead of legacy sensors

Technical improvements:
- Added config_flow.py for integration setup
- Added const.py for centralized constants
- Refactored __init__.py to use ConfigEntry
- Updated alarm_control_panel.py to use CoordinatorEntity
- Replaced sensor.py with binary_sensor.py
- Updated manifest.json with config_flow support

Documentation:
- Updated README.md with GUI setup instructions
- Updated info.md for HACS display
- Added Swedish translations

--- a/custom_components/visonicalarm/manifest.json
+++ b/custom_components/visonicalarm/manifest.json
@@ -1,12 +1,10 @@
 {
   "domain": "visonicalarm",
-  "name": "Visonic/Bentel/Tyco Alarm System",
-  "documentation": "https://github.com/And3rsL/VisonicAlarm-for-Hassio",
-  "version": "v3.3.6",
-  "requirements": [
-    "visonicalarm2==3.3.6",
-    "python-dateutil==2.7.3"
-  ],
-  "dependencies": [],
-  "codeowners": ["@And3rsL"]
+  "name": "Visonic Alarm",
+  "documentation": "https://github.com/skalman77/VisonicAlarm-for-Hassio",
+  "requirements": ["visonic>=3.0.0"],
+  "codeowners": ["@skalman77"],
+  "config_flow": true,
+  "iot_class": "cloud_polling",
+  "version": "2.0.0"
 }
