--- a/custom_components/visonicalarm/manifest.json
+++ b/custom_components/visonicalarm/manifest.json
@@ -2,7 +2,7 @@
   "domain": "visonicalarm",
   "name": "Visonic Alarm",
   "documentation": "https://github.com/skalman77/VisonicAlarm-for-Hassio",
-  "requirements": ["visonicalarm"],
+  "requirements": ["visonicalarm2"],
   "codeowners": ["@skalman77"],
   "config_flow": true,
   "iot_class": "cloud_polling",
