--- a/custom_components/visonicalarm/manifest.json
+++ b/custom_components/visonicalarm/manifest.json
@@ -2,9 +2,9 @@
   "domain": "visonicalarm",
   "name": "Visonic Alarm",
   "documentation": "https://github.com/skalman77/VisonicAlarm-for-Hassio",
-  "requirements": ["visonicalarm2"],
+  "requirements": [ "visonicalarm2==3.3.6", "python-dateutil==2.7.3" ],
   "codeowners": ["@skalman77"],
   "config_flow": true,
   "iot_class": "cloud_polling",
-  "version": "2.0.0"
+  "version": "2.0.1"
 }
